create apis for creator service, unit test
