# src/types/collectible.ts
@@ -1,0 +1,36 @@
+import { Collectible } from '@entities/Collectible';
+
+export interface CollectibleResponse extends Partial<Collectible> {
+  fileUrl: string;
+  title: string;
+  description?: string;
+  royalties: number;
+  freeMinting: boolean;
+}
+
+export interface CreateCollectibleBody {
+  fileUrl: string;
+  title: string;
+  description?: string;
+  royalties: number;
+  freeMinting: boolean;
+}
+
+export interface CreateCollectibleResponse {
+  status: string;
+  transactionId?: string;
+}
+
+export interface UpdateCollectibleBody extends CreateCollectibleBody {
+  id: string;
+}
+
+export interface UpdateCollectibleResponse {
+  status: string;
+  collectibleId: string;
+}
+
+export interface DeleteCollectibleResponse {
+  status: string;
+  collectibleId: string;
+}
